operator/controller/src/test/resources/k8s/examples/auth/keycloak_http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.1.0
          args: ["start-dev", "--import-realm"]
          ports:
            - name: http
              containerPort: 8080
            - name: health
              containerPort: 9000
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
              scheme: HTTP
          volumeMounts:
            - name: keycloak-volume
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: keycloak-volume
          configMap:
            name: keycloak-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer
