operator/controller/src/test/resources/k8s/examples/auth/keycloak_https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.1.0
          args: ["start-dev", "--import-realm"]
          ports:
            - name: http
              containerPort: 8443
            - name: health
              containerPort: 9000
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
              scheme: HTTPS
          volumeMounts:
            - name: keycloak-tls
              mountPath: /etc/x509/https
              readOnly: true
            - name: keycloak-volume
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: keycloak-volume
          configMap:
            name: keycloak-configmap
        - name: keycloak-tls
          secret:
            secretName: keycloak-tls
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8443
  selector:
    app: keycloak
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  tls:
    - hosts:
        - simple-keycloak.apps.cluster.example
      secretName: keycloak-tls
  rules:
    - host: simple-keycloak.apps.cluster.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 443
